# plant-village

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  generate_gradcam_screenshots.py  predict.py  pyproject.toml  requirements.txt  run_eval.py  train.py
blog/: post-en.md  post-pl.md
configs/: train.yaml
outputs/models/: plant_disease_model_classes.txt
scripts/: download_data.py
src/: predict.py
src/data/: dataset.py
src/evaluation/: evaluate.py
src/models/: classifier.py
src/training/: trainer.py
tests/: test_model.py  test_predict.py
